# ctility-lib

./: CMakeLists.txt  README.md  main.c
include/: arena.h  array.h  cstring.h  ctility.h  print.h  string.h  tests.h  timer.h  types.h
src/: arena.c  array.c  print.c  string.c  timer.c
tests/: arena_test.c  array_test.c  string_test.c
